tests/ui/delegation/generics/free-to-trait-static-reuse.stderr
error[E0277]: the trait bound `Struct: Bound<T>` is not satisfied
  --> $DIR/free-to-trait-static-reuse.rs:31:49
   |
LL | impl<'a, T, const X: usize> Trait<'a, T, X> for Struct {}
   |                                                 ^^^^^^ unsatisfied trait bound
   |
help: the trait `Bound<T>` is not implemented for `Struct`
  --> $DIR/free-to-trait-static-reuse.rs:30:1
   |
LL | struct Struct;
   | ^^^^^^^^^^^^^
help: the trait `Bound<T>` is implemented for `usize`
  --> $DIR/free-to-trait-static-reuse.rs:15:1
   |
LL | impl<T> Bound<T> for usize {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `Trait`
  --> $DIR/free-to-trait-static-reuse.rs:9:11
   |
LL | trait Trait<'a, T, const X: usize>
   |       ----- required by a bound in this trait
LL | where
LL |     Self: Bound<T>,
   |           ^^^^^^^^ required by this bound in `Trait`

error[E0277]: the trait bound `String: Trait<'a, T, X>` is not satisfied
  --> $DIR/free-to-trait-static-reuse.rs:27:8
   |
LL | reuse <String as Trait>::static_method as error5;
   |        ^^^^^^ the trait `Trait<'a, T, X>` is not implemented for `String`
   |
help: the following other types implement trait `Trait<'a, T, X>`
  --> $DIR/free-to-trait-static-reuse.rs:14:1
   |
LL | impl<'a, T, const X: usize> Trait<'a, T, X> for usize {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `usize`
...
LL | impl<'a, T, const X: usize> Trait<'a, T, X> for Struct {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Struct`

error[E0277]: the trait bound `Struct: Bound<T>` is not satisfied
  --> $DIR/free-to-trait-static-reuse.rs:34:8
   |
LL | reuse <Struct as Trait>::static_method as error6;
   |        ^^^^^^ unsatisfied trait bound
   |
help: the trait `Bound<T>` is not implemented for `Struct`
  --> $DIR/free-to-trait-static-reuse.rs:30:1
   |
LL | struct Struct;
   | ^^^^^^^^^^^^^
help: the trait `Bound<T>` is implemented for `usize`
  --> $DIR/free-to-trait-static-reuse.rs:15:1
   |
LL | impl<T> Bound<T> for usize {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `Trait::static_method`
  --> $DIR/free-to-trait-static-reuse.rs:9:11
   |
LL |     Self: Bound<T>,
   |           ^^^^^^^^ required by this bound in `Trait::static_method`
LL | {
LL |     fn static_method<'c: 'c, U, const B: bool>(x: usize) {}
   |        ------------- required by a bound in this associated function

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
